@@ -1,4 +1,4 @@
-The following changes have been made between John 1.8.0 and 1.8.0.17:
+The following changes have been made between John 1.8.0 and 1.8.0.18:
 
 * Increased the interleaving for bcrypt on x86-64 from 2x to 3x for a major
 speedup on CPUs without SMT.  Unfortunately, this sometimes results in a minor
@@ -9,6 +9,7 @@ as separate id's for our heuristics on supported hash types.
 * Introduced a number of optimizations for faster handling of large password
 hash files, including loading, cracking, and "--show".  Some of these use more
 memory than before, yet in a more efficient manner.
+* Benchmark using all-different candidate passwords of length 7 by default.
 * Dropped undocumented special handling of "Mc" in 'c' and 'C' rule commands.
 * Dropped undocumented limitation of the 'M' and 'Q' rule commands where they
 would sometimes memorize/check only up to the current hash type's length limit
@@ -376,4 +377,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.115 2019/04/07 19:36:03 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.116 2019/04/08 01:33:49 solar Exp $
